--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ flask_sqlalchemy==3.1.1
 Flask_WTF==1.1.1
 paho_mqtt==2.1.0
 pandas==1.3.5
+psycopg2==2.9.9
 pyserial==3.5
 python-dotenv==1.1.0
 Requests==2.32.4
