--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ Flask_Login==0.6.3
 Flask_Migrate==4.1.0
 flask_sqlalchemy==3.1.1
 Flask_WTF==1.1.1
+gunicorn
 paho_mqtt==2.1.0
 pandas==1.3.5
 psycopg2==2.9.9
